add search to post list to search by category/title

--- a/app/views/posts/_post_list.html.erb
+++ b/app/views/posts/_post_list.html.erb
@@ -3,6 +3,7 @@
     url: url,
     user_id: (current_user.id rescue nil)
   } do %>
+  <%= render partial: 'posts/post_search' %>
   <div class="row" v-for="(post, index) in posts">
     <div class="col">
       <div class="card">
