--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mb-3">
   <ul class="nav">
     <li class="nav-item">
       <%= link_to 'Home',  root_url, class: "nav-link active" %>
