--- a/app/views/posts/_post_search.html.erb
+++ b/app/views/posts/_post_search.html.erb
@@ -1,13 +1,13 @@
-<ul class="list-inlinde">
-  <li class="list-inline-item">
+<div class="row mb-3">
+  <div class="col-2">
     <label>Category</label>
     <input class="form-control" type="text" v-model="category">
-  </li>
-  <li class="list-inline-item">
+  </div>
+  <div class="col-2">
     <label>Title</label>
     <input class="form-control" type="text" v-model="title">
-  </li>
-  <li class="list-inline-item">
+  </div>
+  <div class="col-2 mt-4">
     <button
       type="button"
       class="btn btn-primary"
@@ -15,5 +15,5 @@
     >
       Search
     </button>
-  </li>
-</ul>
+  </div>
+</div>
